--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.17.0",
     "@next/eslint-plugin-next": "12.1.6",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@types/react-dom": "18.0.3",
